# coq_experiments

./: .gitignore  CodeGeneration.v  EffectSystem.v  EffectSystem2.v  EliUtils.v  FactoryGameStuff.v  Induction.v  IntrospectiveCalculus.v  IntrospectiveCalculus10.v  IntrospectiveCalculus11.v  IntrospectiveCalculus12.v  IntrospectiveCalculus13.v  IntrospectiveCalculus14.v  IntrospectiveCalculus15.v  IntrospectiveCalculus16.v  IntrospectiveCalculus17.v  IntrospectiveCalculus18.v  IntrospectiveCalculus19.v  IntrospectiveCalculus2.v  IntrospectiveCalculus20.v  IntrospectiveCalculus21.v  IntrospectiveCalculus3.v  IntrospectiveCalculus4.v  IntrospectiveCalculus5.v  IntrospectiveCalculus6.v  IntrospectiveCalculus7.v  IntrospectiveCalculus8.v  IntrospectiveCalculus9.v  Ordinals.v  ProofExplorerSample.v  README.md  Scratchpad.v  TypeclassBehaviorTest.v  UniqueContainers.v  _CoqProject  utils_utils.py
ai-framework/: Cargo.toml
ai-framework/examples/: download_mnist_to.sh  mnist_data.rs  mnist_tests.rs  mnist_tests_2.rs
ai-framework/src/: api_1.rs  differentiable_operations.rs  layered_sparse_model.rs  lib.rs  model_1.rs  model_2.rs  model_shared.rs  optimizers_1.rs  optimizers_2.rs  soup.rs  time_sharing.rs
coc-rs/: Cargo.toml  CoC_EliDupree_Edition.bib  CoC_EliDupree_Edition.tex  Introspective_Calculus.tex  Introspective_Reasoning.tex  display_girards_data.py  introspective_calculus.py  terms.json  type_relationships.tex
coc-rs/data/: boxes.coc_1  girards_paradox.coc_1  ic_axioms.ic  ic_clean_external_rules.ic  ic_deduction_axioms.ic  ic_explorer_inferences.json  ic_extensionality_axioms.ic  ic_extra_rules.ic  ic_ordinary_axioms.ic  ic_rules.ic  ic_rules_of_deduction.ic  inductive_types.coc_1  introspection.ic  metavariables.json  terms.json
coc-rs/data/ic_proofs/: and_assoc  and_assoc_flipped  and_sym  compatibility_both  compatibility_left_implication  compatibility_left_under_1_binding  compatibility_left_under_1_forall  compatibility_right_under_1_forall  definitions_of_const_under_1_forall  definitions_of_fuse_under_1_forall  eq_is_indistinguishability  eq_refl  eq_sym  eq_sym_inference  eq_trans  eq_trans_under_hypothetical  generalized_const  generalized_fuse  generalized_subst_conj  generalized_subst_lhs  generalized_subst_rhs  imp_to_intinf  imp_trans  imp_weakly_trans  imp_weakly_trans_under_1_forall  inject_tautology_under_hypothetical  internal_specialization  internalize_axiom  intinf_eq_sym  intinf_eq_trans  intinf_subst_conj  intinf_subst_lhs  intinf_subst_rhs  mutual_implication_gives_equality  mutual_implication_is_equality  partial_specialization_1  specialization  strip_const  subst_gives_internal_weak_imp  substitute_in_conjunction_external_variables  (+8 more)
coc-rs/examples/: check_all_proofs.rs  check_all_proofs_incremental.rs  gui.rs  gui2.rs  ic_explorer.rs  ic_prolog.rs  ic_sandbox.rs  lambda_index_system_testing.rs  parse_and_stuff.rs  print_coc_in_coc_1.rs  reformat_coc_1.rs  sandbox.rs  sk_equivalence_finder.rs  unfold_girards_paradox.rs
coc-rs/src/: display.rs  incomplete_term.rs  inductive_type.rs  lib.rs  metavariable.rs  term.rs  term_variable.rs  types.rs  utils.rs
coc-rs/src/coc_text_format_1/: coc_text_format_1.lalrpop  display.rs  from_constructors.rs  metavariable_conversions.rs  mod.rs  unfolding.rs
coc-rs/src/constructors/: coc.constructors  coc2.constructors  constructors.lalrpop  mod.rs
coc-rs/src/introspective_calculus/: derivers.rs  display.rs  formula_types.rs  inference.rs  introspective_calculus.lalrpop  logic.rs  mod.rs  prolog.rs  proof_hierarchy.rs  proof_serialization.rs  proofs.rs  provers.rs  raw_proofs.rs  raw_proofs_ext.rs  rules.rs  solver_pool.rs  specialization.rs  tuple_equality_tree.rs  uncurried_function.rs  unfolding.rs
coc-rs/src/introspective_calculus/derivers/: by_specializing_a_proven_inference.rs  by_substitution.rs  by_substitution_and_unfolding.rs
coc-rs/src/introspective_calculus/solver_pool/: aggregator.rs  discover_unfoldings.rs  try_internally_specializing_proven_ucfes.rs  try_specializing_proven_inferences.rs  try_substituting_with_transitive_equalities.rs  try_substitutions.rs
coc-rs/static/: gui2.html  ic_explorer.html  index.html
coc-rs/static/media/: gui2.js  ic_explorer.css  ic_explorer.js  style.css
hash-capsule/: Cargo.toml
hash-capsule/src/: caching.rs  lib.rs  serialization.rs
proof_explorer/: .gitignore  Cargo.toml  README.md  style.scss
proof_explorer/src/: global_state_types.rs  goals_analysis.rs  interface.rs  main.rs  main_thread_infrastructure.rs  serapi_protocol.rs  sertop_glue.rs  startup.rs  supervisor_thread.rs  tactics.rs  ui_html_generation.rs  universally_deserializable.rs  utils.rs  webserver_glue.rs
proof_explorer/static/: index.html
proof_explorer/static/media/: style.css
quick_and_dirty_web_gui/: Cargo.toml
quick_and_dirty_web_gui/src/: lib.rs  qadwg.js
