[package]
name = "ai-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6", features = ["rayon"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
serde = { version = "1.0.152", features = ["derive"] }
live-prop-test = { git = "https://github.com/elidupree/live-prop-test" }
map-macro = "0.2.5"
autograd = {git="https://github.com/elidupree/rust-autograd/"}
