[package]
name = "coc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmatch = "0.1.1"
siphasher = "0.3.10"
arrayvec = "0.7.2"
extend = "1.1.2"
quick_and_dirty_web_gui = { path = "../quick_and_dirty_web_gui" }
actix-web = "4.2.1"

[profile.dev]
opt-level = 3

