[package]
name = "coc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmatch = "0.1.1"
siphasher = "0.3.10"
arrayvec = "0.7.2"
extend = "1.1.2"
quick_and_dirty_web_gui = { path = "../quick_and_dirty_web_gui" }
actix-web = "4.2.1"
typed-html = { git = "https://github.com/bodil/typed-html/", version = "0.2.2" }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
clap = { version = "4.0.32", features = ["derive"] }
anyhow = "1.0.68"
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
live-prop-test = { git = "https://github.com/elidupree/live-prop-test" }
regex = "1.7.1"
#rand = "0.8.5"
#autograd = "2.0.0-rc3"

[build-dependencies]
lalrpop = "0.19.8"

[profile.dev]
opt-level = 3

