[package]
name = "hash-capsule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
internment = {version = "0.7.1", features = ["arc"]}
siphasher = "0.3.11"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
anyhow = "1.0.75"