[package]
name = "proof_explorer"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-lexpr = { git = "https://github.com/elidupree/lexpr-rs/" }
typed-html = { git = "https://github.com/bodil/typed-html/", version = "0.2.2" }
parking_lot = "0.11.1"
lexpr = "0.2.6"
anyhow = "1.0.38"
derivative = "2.2.0"
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", features = ["json"] }
difference = "2.0.0"
guard = "0.5.0"
clap = "~2.33.3"

[profile.dev]
opt-level = 3
